- Fixed bug #46292 (PDO::setFetchMode() shouldn't requires the 2nd arg when using FETCH_CLASSTYPE)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@267322 c90b9560-bf6c-de11-be94-00142212c4b1